--- a/app/src/main/res/layout/entrainement.xml
+++ b/app/src/main/res/layout/entrainement.xml
@@ -69,13 +69,23 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Quiz 1" />
+            android:text="Shot Game" />
 
         <Button
             android:id="@+id/button6"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Quiz 2" />
+            android:text="Quiz" />
     </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
+    <Button
+        android:id="@+id/button7"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Retour" />
 </LinearLayout>
