--- a/app/src/main/res/layout/menu1joueur.xml
+++ b/app/src/main/res/layout/menu1joueur.xml
@@ -28,5 +28,16 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:text="Entrainement" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:text="Retour" />
 
 </LinearLayout>
