Modification du jeu catch game et du quizz; finalisation de la partie rapide solo avec les jeux de Matt

--- a/app/src/main/res/layout/entrainement.xml
+++ b/app/src/main/res/layout/entrainement.xml
@@ -54,7 +54,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Jeu 4" />
+            android:text="Shake It" />
     </LinearLayout>
 
     <LinearLayout
