--- a/app/src/main/res/layout/partie_rapide_result.xml
+++ b/app/src/main/res/layout/partie_rapide_result.xml
@@ -13,4 +13,12 @@
         android:textColor="@android:color/black"
         android:text="Résultats"
         android:layout_centerInParent="true"/>
+    <Button
+        android:id="@+id/returnButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Retour au menu"
+        android:layout_below="@id/resultText"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="32dp"/>
 </RelativeLayout>
