--- a/app/src/main/res/layout/entrainement.xml
+++ b/app/src/main/res/layout/entrainement.xml
@@ -78,6 +78,27 @@
             android:layout_weight="1"
             android:text="Quiz" />
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="center"
+        android:weightSum="2">
+
+        <Button
+            android:id="@+id/button8"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Tap Game" />
+
+        <Button
+            android:id="@+id/button9"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Reflex Game" />
+    </LinearLayout>
     <View
         android:layout_width="match_parent"
         android:layout_height="0dp"
